# aoc

./: .gitignore  Cargo.toml  README.md  package.json  pyproject.toml
year2022/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
year2023/: package-lock.json  package.json  tsconfig.json
year2023/input/: 00.txt
year2023/input_test/: 00.txt
year2023/src/: main.ts
year2023/src/days/: day01.ts
year2024/: Cargo.toml
year2024/src/: main.rs
year2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs
year2025/: Cargo.toml
year2025/src/: main.rs
year2025/src/days/: day01.rs  day02.rs  day03.rs  day04.rs
year2025/src_py/: day05.py
